add: user activate route
